--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@ html {
   margin: 0;
   padding: 0;
 }
+.text-brand {
+  color: #1cc7c1;
+}
+.btn-brand {
+  background-image: linear-gradient(75deg, #19d3ae, #0fcfec);
+  border-color: transparent;
+  text-transform: uppercase;
+  font-weight: 600;
+}
